src/objects/Call_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Sub_Type__c</fullName>
        <label>Call Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Bills Not in System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Termed/Requested Reason Large and Small Group Premium Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Disenrolled Incorrectly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Call_Subtype__c</fullName>
        <label>Call Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_OOB__c</fullName>
        <label>Name(OOB)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Mapping__c</fullName>
        <label>Record Type Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Call Topic</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Call Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>